@@ -1,0 +1,15 @@
+// ConnectBeforeAttribute.cs
+//
+// Author:   Mike Kestner  <mkestner@ximian.com>
+//
+// (C) 2004 Novell, Inc.
+
+namespace GLib {
+
+	using System;
+
+	public sealed class ConnectBeforeAttribute : Attribute 
+	{
+		public ConnectBeforeAttribute () {}
+	}
+}
