@@ -1,3 +1,13 @@
+2004-03-16  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/ObjectGen.cs : don't gen a Signals hash per class.
+	* generator/Signal.cs : gen checks for [ConnectBefore].
+	* generator/SignalHandler.cs : add connect_flags param to ctor.
+	* glib/ConnectBeforeAttribute.cs : new attr
+	* glib/Makefile.am : add new file
+	* glib/Object.cs : add before/after hashes and EventLists
+	* gnome/CanvasProxy.cs : use AfterSignals and AfterHandlers.
+
 2004-03-14  John Luke  <jluke@cfl.rr.com>
 
 	* parser/gapi-fixup.in:
